# ContextX-Intelligence

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  core.rs  doctor.rs  install.rs  main.rs  mcp.rs  proxy.rs  setup.rs  tui.rs  wrap.rs
