[package]
name = "contextx"
version = "0.1.0"
edition = "2024"
authors = ["Santhakumar K <Alpha X Solutions>"]
description = "ContextX Intelligence: local-first Claude usage monitor and context token saver"
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["full"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
which = "7.0"

[dev-dependencies]
tempfile = "3.14"
